update to user endpoint
