# ResumeAPI/Schemas/swagger.json
@@ -95,8 +95,16 @@
         "summary": "Gets user by username",
         "parameters": [
           {
-            "name": "username",
+            "name": "userId",
             "in": "query",
+            "description": "",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "cookie",
+            "in": "header",
             "description": "",
             "schema": {
               "type": "string"
@@ -120,6 +128,26 @@
               "text/json": {
                 "schema": {
                   "$ref": "#/components/schemas/UserViewModel"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
                 }
               }
             }
